--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Our site</h1>
+
+<% if user_signed_in? %>
+  <h2>Welcome back <%= current_user.email %>!</h2>
+
+
+<% end %>
