added emoji as discussed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
 
 <% if user_signed_in? %>
   <h2>Welcome back <%= current_user.email %>!</h2>
-  <p>You like <%= current_user.favorite_animal %>s</p>
+  <p>You like 🙀 <%= current_user.favorite_animal %>s</p>
 
 <% end %>
